Generate Java source code instead of class files
This should be more flexible than the original approach of having jextract generate compiled .class files, as the maven-compiler-plugin can be configured and is Maven-native. However, this also requires passing additional compiler args using the maven-compiler-plugin for as long as jextract is in the incubation stage.